--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -122,7 +122,7 @@
 <!--                    <a class="nav-link" th:href="@{/index}">Home</a>-->
 <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/appointments/doctor}">Appointments</a>
+                    <a class="nav-link" th:href="@{/Consultation/doctor}">Appointments</a>
                 </li>
 
                 <li class="nav-item">
